SC-12 [TAS/RI] Fixing primary button colour when clicked.  Clearing checkboxes on primary question collapse

--- a/app/features/common/main.scss
+++ b/app/features/common/main.scss
@@ -30,7 +30,7 @@ input[type="checkbox"] {
   color: black;
   border-color: $oss-primarygreen;
 
-  &:hover {
+  &:hover, &:active, &:focus, &:focus:active {
     color: black;
     background-color: $oss-lightgreen;
     border-color: $oss-primarygreen;
